--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -195,7 +195,7 @@
             <div class="pricing-cards">
                 <div class="pricing-card">
                     <h3 class="pricing-title">Starter</h3>
-                    <div class="pricing-price">29</div>
+                    <div class="pricing-price">1299</div>
                     <ul class="pricing-features">
                         <li><i class="fas fa-check"></i> Single register</li>
                         <li><i class="fas fa-check"></i> Up to 500 products</li>
@@ -208,7 +208,7 @@
                 
                 <div class="pricing-card popular">
                     <h3 class="pricing-title">Professional</h3>
-                    <div class="pricing-price">59</div>
+                    <div class="pricing-price">3999</div>
                     <ul class="pricing-features">
                         <li><i class="fas fa-check"></i> Up to 3 registers</li>
                         <li><i class="fas fa-check"></i> Unlimited products</li>
@@ -222,7 +222,7 @@
                 
                 <div class="pricing-card">
                     <h3 class="pricing-title">Enterprise</h3>
-                    <div class="pricing-price">99</div>
+                    <div class="pricing-price">6999</div>
                     <ul class="pricing-features">
                         <li><i class="fas fa-check"></i> Unlimited registers</li>
                         <li><i class="fas fa-check"></i> Unlimited products</li>
@@ -370,19 +370,19 @@
                     <ul>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>123 Business Avenue, Tech City, TC 10101</span>
+                            <span>Moi Avenue, Bungoma, TC 10101</span>
                         </li>
                         <li>
                             <i class="fas fa-phone-alt"></i>
-                            <span>+1 (555) 123-4567</span>
+                            <span>+254 (705) 980-652</span>
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <span>info@hyperpos.com</span>
+                            <span>brandonochieng72@gmail</span>
                         </li>
                         <li>
                             <i class="fas fa-clock"></i>
-                            <span>Mon-Fri: 9AM - 5PM EST</span>
+                            <span>Mon-SAT: 9AM - 5PM EST</span>
                         </li>
                     </ul>
                 </div>
