--- a/static/css/core.css
+++ b/static/css/core.css
@@ -550,7 +550,7 @@ nav a:hover::after {
 }
 
 .pricing-price::before {
-    content: '$';
+    content: 'KSH';
     position: absolute;
     top: 5px;
     left: -15px;
